# backend/swagger.yml
@@ -308,3 +308,19 @@ paths:
           $ref: "#/components/responses/UnprocessableEntity"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
+
+  /user/profile:
+    get:
+      summary: User profile
+      tags:
+        - User
+      security:
+        - bearerAuth: []
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+        "404":
+          $ref: "#/components/responses/NotFoundError"
